--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello megz!</title>
+	<title>Matching Game</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<h1>hello megz from header</h1>
+<div id="main-grid" class = "container"></div>
+<script src="js/script.js"></script>
 </body>
 </html>
